# NovAST

./: README.md  package-lock.json  package.json  tsup.config.ts
novast-core/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json
novast-core/.github/workflows/: CI.yml
novast-core/src/: lib.rs
src/: cli.ts  heatmap.ts  lsp.ts  parser.ts  proxy.ts  resolver.ts  weaver.ts
