
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "novast_core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["napi4"] }
napi-derive = "3.0.0"
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
