
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "novast_core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["napi4"] }
napi-derive = "3.0.0"
tree-sitter = "0.26.8"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-dart = "0.2.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
